updated html text pages | close #60

--- a/FlowCrypt/src/main/assets/html/license.htm
+++ b/FlowCrypt/src/main/assets/html/license.htm
@@ -1,7 +1,23 @@
 <!--
   ~ Business Source License 1.0 © 2017 FlowCrypt Limited (tom@cryptup.org).
   ~ Use limitations apply. See https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE
-  ~ Contributors: DenBond7
+  ~ Contributors: Tom James Holub
   -->
 
-<div>sample license page</div>
+<style>.text {padding: 10px;font-family: sans-serif;  color:#555;} h1 {font-size: 20px;}</style>
+
+<div class="text">
+
+    <h1>FlowCrypt License</h1>
+
+    <p>FlowCrypt Android App is published under Business Source License, which makes it free to use
+        within certain limitations. See
+        <a href="https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE">FlowCrypt for
+            Android License Page</a>to learn more.</p>
+
+    <p>See <a href="https://cryptup.org/pricing.htm">FlowCrypt Pricing Page</a> for additional
+        licensing info.</p>
+
+    <p>Please send me your questions to tom@flowcrypt.com</p>
+
+</div>
