--- a/FlowCrypt/src/main/assets/html/privacy.htm
+++ b/FlowCrypt/src/main/assets/html/privacy.htm
@@ -1,32 +1,32 @@
 <!--
   ~ Business Source License 1.0 © 2017 FlowCrypt Limited (tom@cryptup.org).
   ~ Use limitations apply. See https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE
-  ~ Contributors: DenBond7
+  ~ Contributors: Tom James Holub
   -->
 
 <style>.text {padding: 10px;font-family: sans-serif;  color:#555;} h1 {font-size: 20px;}</style>
 
 <div class="text">
 
-    <h1>CryptUp Privacy Policy</h1>
+    <h1>FlowCrypt Privacy Policy</h1>
 
-    <p>The goal is that CryptUp will have access to as little information as necessary. The details
+    <p>The goal is that FlowCrypt will have access to as little information as necessary. The details
         are outlined below.</p>
 
-    <p>This document is the first draft and it is written in Plain English as opposed to Legal
+    <p>This document is the second draft and it is written in Plain English as opposed to Legal
         Language so that it can be readily understood. Please send me feedback if any section needs
         clarification or clearer language.</p>
 
     <h2>Terminology</h2>
     <ul>
-        <li>CRYPTUP or WE - CryptUp's developers, employees, legal entity or server software that is
+        <li>FLOWCRYPT or WE - FlowCrypt's developers, employees, legal entity or server software that is
             under our direct control
         </li>
         <li>YOU - the user of this software bound by its licence and terms of use</li>
-        <li>SERVER HARDWARE - a 3rd party server infrastructure provided as a service to CRYPTUP.
+        <li>SERVER HARDWARE - a 3rd party server infrastructure provided as a service to FLOWCRYPT.
             This may include cloud servers and related services
         </li>
-        <li>CRYPTUP SERVER - server software holding user account related information, and allowing
+        <li>FLOWCRYPT SERVER - server software holding user account related information, and allowing
             storage of encrypted MESSAGE when needed. This software runs on SERVER HARDWARE
         </li>
         <li>ATTESTER - server software necessary to make encrypted PGP communication smooth.
@@ -51,13 +51,13 @@
         <li>LOCAL MACHINE - general term for hardware used by end users such as a computer, laptop,
             tablet or a phone
         </li>
-        <li>LOCAL APP - CryptUp software that runs on LOCAL MACHINE. This may take a form of a
+        <li>LOCAL APP - FlowCrypt software that runs on LOCAL MACHINE. This may take a form of a
             browser extension or a native application
         </li>
         <li>LOCAL APP CONTACTS - Collection of contacts who use encryption, their PUBLIC KEYs and
             related info stored in LOCAL APP
         </li>
-        <li>WEB APP - CryptUp software which is served on the web through a link</li>
+        <li>WEB APP - FlowCrypt software which is served on the web through a link</li>
         <li>PRIVATE WEB APP - is a WEB APP that produces or keeps sensitive MESSAGE CONTENT
             exclusively on LOCAL MACHINE
         </li>
@@ -91,11 +91,11 @@
     </ul>
 
     <h2>End-to-end encryption</h2>
-    <p>Regardless of the method of MESSAGE delivery, CryptUp is an end-to-end encryption software.
+    <p>Regardless of the method of MESSAGE delivery, FlowCrypt is an end-to-end encryption software.
         That means the CONTENT of your MESSAGE is encrypted in LOCAL APP or PRIVATE WEB APP and then
         sent to the recipient encrypted. How the MESSAGE is handled by the recipient depends on
         their setup. The vast majority of compatible software will only decrypt your MESSAGEs on the
-        recipient's LOCAL MACHINE. That means neither EMAIL PROVIDER or CRYPTUP can access the
+        recipient's LOCAL MACHINE. That means neither EMAIL PROVIDER or FLOWCRYPT can access the
         CONTENT of the MESSAGE in transit or at rest.</p>
 
     <h2>Email ACCESS TOKEN</h2>
@@ -116,26 +116,26 @@
     <p>When any of your recipients do not have COMPATIBLE SOFTWARE, LOCAL APP or PRIVATE WEB APP
         will require a MESSAGE PASSWORD to be provided by sender. Anyone who has access to the
         MESSAGE PASSWORD can open such MESSAGE. The encrypted MESSAGE is then sent through EMAIL
-        PROVIDERs the same way as above. In addition, encrypted MESSAGE will be stored on CRYPTUP
+        PROVIDERs the same way as above. In addition, encrypted MESSAGE will be stored on FLOWCRYPT
         SERVER. This helps recipients without COMPATIBLE SOFTWARE to open such messages and view
         their CONTENT through the use of PRIVATE WEB APP. When the recipient doesn't have COMPATIBLE
-        SOFTWARE and the encrypted MESSAGE is relayed through CRYPTUP SERVER, following information
+        SOFTWARE and the encrypted MESSAGE is relayed through FLOWCRYPT SERVER, following information
         is stored along with it: (a) date and time MESSAGE was sent, (b) size of MESSAGE, (c) the
         encrypted MESSAGE, (d) message expiration time, (e): indication if this is a MESSAGE text or
         attachment, (f) sender of MESSAGE only if this is an attachment and this particular MESSAGE
         never expires. MESSAGE that is not an attachment or is set to expire at a future date will
-        not have any sender associated with it on CRYPTUP SERVER. Because MESSAGE PASSWORD can be
+        not have any sender associated with it on FLOWCRYPT SERVER. Because MESSAGE PASSWORD can be
         subject to a BRUTE FORCE ATTACK, it is advisable to use a MESSAGE PASSWORD of sufficient
         strength for your particular use case.</p>
 
     <h2>Handling MESSAGE PASSWORDs and PASS PHRASEs</h2>
-    <p>CRYPTUP will never have access to user PRIVATE KEYs, MESSAGE PASSWORDs or PASS PHRASEs. LOCAL
-        APP is intended to never send such information to CRYPTUP SERVER or ATTESTER.</p>
-    <p>LOCAL APP, PRIVATE WEB APP or any other CRYPTUP software will not distribute PASS PHRASEs or
+    <p>FLOWCRYPT will never have access to user PRIVATE KEYs, MESSAGE PASSWORDs or PASS PHRASEs. LOCAL
+        APP is intended to never send such information to FLOWCRYPT SERVER or ATTESTER.</p>
+    <p>LOCAL APP, PRIVATE WEB APP or any other FLOWCRYPT software will not distribute PASS PHRASEs or
         MESSAGE PASSWORDs in any way. Safe storage, backup and distribution of this material is left
         solely on the user.</p>
     <p>If any user intentionally or unintentionally sends a PRIVATE KEY, MESSAGE PASSWORD or PASS
-        PHRASE to CRYPTUP (please do not do that!), CRYPTUP will delete such information immediately
+        PHRASE to FLOWCRYPT (please do not do that!), FLOWCRYPT will delete such information immediately
         upon noticing it, unless the user explicitly indicated that this material is solely for
         testing purposes. In either case, users should consider such keys not trusted and
         compromised, and should avoid using them in production scenarios.</p>
@@ -147,7 +147,7 @@
         is advised to always update to latest operating system, keep up to date with latest security
         fixes, keep the system virus free using reliable antivirus software, using full-disk
         encryption or any other practices that make LOCAL MACHINE less vulnerable to attackers.
-        Additionally, CRYPTUP recommends that you select an option to "Always require a pass phrase
+        Additionally, FLOWCRYPT recommends that you select an option to "Always require a pass phrase
         when opening email" as an additional layer of security in case your LOCAL MACHINE gets
         compromised in the future through physical or other means.</p>
     <p>In addition to storing PRIVATE KEY in LOCAL APP exclusive to LOCAL MACHINE, depending on how
@@ -191,7 +191,7 @@
     <ul>
         <li>handling of PUBLIC KEYs, ATTESTER data storage and publication policy</li>
         <li>handling of expired MESSAGEs (their content and all associated data gets deleted)</li>
-        <li>policy of purging data from CRYPTUP SERVER (expired messages purged automatically,
+        <li>policy of purging data from FLOWCRYPT SERVER (expired messages purged automatically,
             everything else per request of sender)
         </li>
         <li>the process and technical details of purging data</li>
