--- a/FlowCrypt/src/main/assets/html/terms.htm
+++ b/FlowCrypt/src/main/assets/html/terms.htm
@@ -1,7 +1,29 @@
 <!--
   ~ Business Source License 1.0 © 2017 FlowCrypt Limited (tom@cryptup.org).
   ~ Use limitations apply. See https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE
-  ~ Contributors: DenBond7
+  ~ Contributors: Tom James Holub
   -->
 
-<div>sample terms page</div>
+<style>.text {padding: 10px;font-family: sans-serif;  color:#555;} h1 {font-size: 20px;}</style>
+
+<div class="text">
+
+    <h1>FlowCrypt Terms of Use</h1>
+
+    <p>It's prohibited to use FlowCrypt for any illegal activity.</p>
+
+    <p>Further, it's prohibited to use it in any way that reduces privacy of other users.</p>
+
+    <p>TO THE EXTENT PERMITTED BY APPLICABLE LAW, THE SOFTWARE AND ALL SERVICES PROVIDED BY LICENSOR
+        OR ITS AFFILIATES UNDER OR IN CONNECTION WITH WITH THIS BUSINESS SOURCE LICENSE ARE PROVIDED
+        ON AN “AS IS” AND “AS AVAILABLE” BASIS. YOU EXPRESSLY WAIVE ALL WARRANTIES, EXPRESS OR
+        IMPLIED, INCLUDING (WITHOUT LIMITATION) WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
+        PARTICULAR PURPOSE, NON-INFRINGEMENT, TITLE, SYSTEM INTEGRATION, AND ACCURACY OF
+        INFORMATIONAL CONTENT.</p>
+
+    <p>See <a href="https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE">FlowCrypt
+        for Android License Page</a>to learn more.</p>
+
+    <p>Please send me your questions to tom@flowcrypt.com</p>
+
+</div>
