--- a/FlowCrypt/src/main/assets/html/security.htm
+++ b/FlowCrypt/src/main/assets/html/security.htm
@@ -1,7 +1,26 @@
 <!--
   ~ Business Source License 1.0 © 2017 FlowCrypt Limited (tom@cryptup.org).
   ~ Use limitations apply. See https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE
-  ~ Contributors: DenBond7
+  ~ Contributors: Tom James Holub
   -->
 
-<div>sample security page</div>
+<style>.text {padding: 10px;font-family: sans-serif;  color:#555;} h1 {font-size: 20px;}</style>
+
+<div class="text">
+
+    <h1>FlowCrypt Security</h1>
+
+    <p>Warning: this is an Alpha release of FlowCrypt. It may not work as intended, crash, or
+        contain security bugs.</p>
+
+    <p>FlowCrypt uses strong end-to-end encryption, meaning only you and your intended recipients
+        will be able to read content of your encrypted messages. It's designed so that no unintended
+        parties can read your email, including your email provider, your recipient's email provider,
+        FlowCrypt developers or anyone else.</p>
+
+    <p>Your email access token, pass phrases and other sensitive material stays stored on your
+        device. It will not be shared with FlowCrypt developers or anyone else.</p>
+
+    <p>Please send me your questions to tom@flowcrypt.com</p>
+
+</div>
