--- a/FlowCrypt/src/main/assets/html/sources.htm
+++ b/FlowCrypt/src/main/assets/html/sources.htm
@@ -1,7 +1,18 @@
 <!--
   ~ Business Source License 1.0 © 2017 FlowCrypt Limited (tom@cryptup.org).
   ~ Use limitations apply. See https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE
-  ~ Contributors: DenBond7
+  ~ Contributors: Tom James Holub
   -->
 
-<div>sample sources page</div>
+<style>.text {padding: 10px;font-family: sans-serif;  color:#555;} h1 {font-size: 20px;}</style>
+
+<div class="text">
+
+    <h1>FlowCrypt Source Code</h1>
+
+    <p>Sources of this app and other apps produced by FlowCrypt Limited can be found at
+        <a href="https://github.com/FlowCrypt">FlowCrypt GitHub Page</a></p>
+
+    <p>Please send me your questions to tom@flowcrypt.com</p>
+
+</div>
