security warning in red | close #60

--- a/FlowCrypt/src/main/assets/html/security.htm
+++ b/FlowCrypt/src/main/assets/html/security.htm
@@ -10,7 +10,7 @@
 
     <h1>FlowCrypt Security</h1>
 
-    <p>Warning: this is an Alpha release of FlowCrypt. It may not work as intended, crash, or
+    <p style="color: red;">Warning: this is an Alpha release of FlowCrypt. It may not work as intended, crash, or
         contain security bugs.</p>
 
     <p>FlowCrypt uses strong end-to-end encryption, meaning only you and your intended recipients
