--- a/FlowCrypt/src/main/assets/html/pass_phrase_hint.htm
+++ b/FlowCrypt/src/main/assets/html/pass_phrase_hint.htm
@@ -32,7 +32,7 @@
 <div class="featherlight-content">
     <div class="lightboxed featherlight-inner">
         <p>Choose a VERY long passphrase. For example, combine uncommon words like this:</p>
-        <pre class="good">unconventional blueberry unlike any
+        <pre class="good">cheesy pod unlike any other
 semi automated shiseido mask
 icelanders prefer real sauna</pre>
         <p>Combinations like that are memorable, easy to type and the most secure.</p>
