add work attributions | close #226

--- a/FlowCrypt/src/main/assets/html/license.htm
+++ b/FlowCrypt/src/main/assets/html/license.htm
@@ -3,7 +3,8 @@
   ~ Contributors: DenBond7
   -->
 
-<style>.text {padding: 10px;font-family: sans-serif;  color:#555;} h1 {font-size: 20px;}</style>
+<style>.text {padding: 10px;font-family: sans-serif;  color:#555;} h1 {font-size: 20px;} ul {margin-left: 0px;
+padding-left:20px;}</style>
 
 <div class="text">
 
@@ -18,5 +19,52 @@
         licensing info.</p>
 
     <p>Please send me your questions to human@flowcrypt.com</p>
+
+    <h1>Work attributions</h1>
+
+    <p>This app uses the following:</p>
+
+    <ul>
+        <li>
+            <a href="https://github.com/openpgpjs/openpgpjs">OpenPGP.js</a>
+            (<a href="https://github.com/openpgpjs/openpgpjs/blob/master/LICENSE">LGPL 3.0</a>)
+        </li>
+        <li>
+            <a href="https://github.com/emailjs">email.js</a>
+            (<a href="https://github.com/emailjs/emailjs-mime-parser/blob/master/LICENSE">MIT License</a>)
+        </li>
+        <li>
+            <a href="https://github.com/eclipsesource/j2v8">J2V8</a>
+            (<a href="">Eclipse Public License 1.0</a>)
+        </li>
+        <li>
+            <a href="https://github.com/ACRA/acra">ACRA/acra</a>
+            (<a href="https://github.com/acra/acra/blob/master/LICENSE">Apache-2.0 License</a>)
+        </li>
+        <li>
+            <a href="https://github.com/google/gson">google/gson</a>
+            (<a href="https://github.com/google/gson/blob/master/LICENSE">Apache-2.0 License</a>)
+        </li>
+        <li>
+            <a href="https://github.com/square/retrofit">square/retrofit</a>
+            (<a href="https://github.com/square/retrofit/blob/master/LICENSE.txt">Apache-2.0 License</a>)
+        </li>
+        <li>
+            <a href="https://github.com/square/okhttp">square/okhttp</a>
+            (<a href="https://github.com/square/okhttp/blob/master/LICENSE.txt">Apache-2.0 License</a>)
+        </li>
+        <li>
+            <a href="https://github.com/apache/commons-io">apache/commons-io</a>
+            (<a href="https://github.com/apache/commons-io/blob/master/LICENSE.txt">Apache-2.0 License</a>)
+        </li>
+        <li>
+            <a href="https://github.com/hootsuite/nachos">hootsuite/nachos</a>
+            (<a href="https://github.com/hootsuite/nachos/blob/master/LICENSE">Apache-2.0 License</a>)
+        </li>
+        <li>
+            <a href="https://github.com/bumptech/glide">bumptech/glide</a>
+            (<a href="https://github.com/bumptech/glide/blob/master/LICENSE">license</a>)
+        </li>
+    </ul>
 
 </div>
