Replaced https://api.cryptup.io/ to https://flowcrypt.com/api/. Fixed API (ACRA, Retrofit).

--- a/FlowCrypt/src/main/assets/html/license.htm
+++ b/FlowCrypt/src/main/assets/html/license.htm
@@ -15,7 +15,7 @@ padding-left:20px;}</style>
         <a href="https://github.com/FlowCrypt/flowcrypt-android/blob/master/LICENSE">FlowCrypt for
             Android License Page</a> to learn more.</p>
 
-    <p>See <a href="https://cryptup.org/pricing.htm">FlowCrypt Pricing Page</a> for additional
+    <p>See <a href="https://flowcrypt.com/pricing">FlowCrypt Pricing Page</a> for additional
         licensing info.</p>
 
     <p>Please send me your questions to human@flowcrypt.com</p>
