added credit to nodejs-mobile | #409

--- a/FlowCrypt/src/main/assets/html/license.htm
+++ b/FlowCrypt/src/main/assets/html/license.htm
@@ -36,6 +36,10 @@ padding-left:20px;}
             (<a href="https://github.com/emailjs/emailjs-mime-parser/blob/master/LICENSE">MIT License</a>)
         </li>
         <li>
+            <a href="https://github.com/janeasystems/nodejs-mobile">nodejs-mobile</a>
+            (<a href="https://github.com/janeasystems/nodejs-mobile/blob/mobile-master/LICENSE">License</a>)
+        </li>
+        <li>
             <a href="https://github.com/eclipsesource/j2v8">J2V8</a>
             (<a href="">Eclipse Public License 1.0</a>)
         </li>
