--- a/FlowCrypt/src/main/assets/html/security.htm
+++ b/FlowCrypt/src/main/assets/html/security.htm
@@ -9,17 +9,14 @@
 
     <h1>FlowCrypt Security</h1>
 
-    <p style="color: red;">Warning: this is an Alpha release of FlowCrypt. It may not work as intended, crash, or
-        contain security bugs.</p>
-
     <p>FlowCrypt uses strong end-to-end encryption, meaning only you and your intended recipients
         will be able to read content of your encrypted messages. It's designed so that no unintended
         parties can read your email, including your email provider, your recipient's email provider,
         FlowCrypt developers or anyone else.</p>
 
-    <p>Your email access token, pass phrases and other sensitive material stays stored on your
+    <p>Your email access token, pass phrases and other sensitive material stay stored on your
         device. It will not be shared with FlowCrypt developers or anyone else.</p>
 
-    <p>Please send me your questions to human@flowcrypt.com</p>
+    <p>Please send us your questions at human@flowcrypt.com</p>
 
 </div>
