--- a/FlowCrypt/src/main/assets/html/license.htm
+++ b/FlowCrypt/src/main/assets/html/license.htm
@@ -28,6 +28,11 @@ padding-left:20px;}
 
     <ul>
         <li>
+            <a href="https://github.com/pgpainless/pgpainless">pgpainless/pgpainless</a>
+            (<a href="https://github.com/pgpainless/pgpainless/blob/master/LICENSE">Apache-2.0
+            License</a>)
+        </li>
+        <li>
             <a href="https://github.com/ACRA/acra">ACRA/acra</a>
             (<a href="https://github.com/acra/acra/blob/master/LICENSE">Apache-2.0 License</a>)
         </li>
@@ -37,7 +42,8 @@ padding-left:20px;}
         </li>
         <li>
             <a href="https://github.com/square/retrofit">square/retrofit</a>
-            (<a href="https://github.com/square/retrofit/blob/master/LICENSE.txt">Apache-2.0 License</a>)
+            (<a href="https://github.com/square/retrofit/blob/master/LICENSE.txt">Apache-2.0
+            License</a>)
         </li>
         <li>
             <a href="https://github.com/square/okhttp">square/okhttp</a>
